add imaginary part

--- a/jack_init.ini
+++ b/jack_init.ini
@@ -1,7 +1,8 @@
-# traj_start = 1100
+traj_start = 1100
 # traj_start = 1250
-traj_start = 1360
+# traj_start = 1360
 traj_end = 1370
+# traj_end = 1200
 traj_sep = 10
 
 time_cutoff_start = 2
