--- a/jack_init.ini
+++ b/jack_init.ini
@@ -1,5 +1,5 @@
-traj_start = 1100
-# traj_start = 1250
+# traj_start = 1100
+traj_start = 1250
 # traj_start = 1360
 traj_end = 1370
 # traj_end = 1200
@@ -7,3 +7,20 @@ traj_sep = 10
 
 time_cutoff_start = 2
 time_cutoff_end = 16
+
+
+# # target can be: real, real_CUBA3d, imag_analytic, imag_CUBA3d
+
+# target = real_CUBA3d
+# file_p3 = /projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/p30e10-5Cuhre_with_p3/data.txt
+# file_p1 = /projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/p30e10-4Cuhre_with_p1/data.txt
+
+# # for imag_CUBA3d
+# target = imag_CUBA3d
+# file_p3 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p3/data.txt
+# file_p1 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p1/data.txt
+
+# target = real
+# file_p3 = ./integral/data.txt
+
+target = imag_analytic
