--- a/jack_init.ini
+++ b/jack_init.ini
@@ -20,7 +20,7 @@ time_cutoff_end = 16
 # file_p3 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p3/data.txt
 # file_p1 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p1/data.txt
 
-# target = real
-# file_p3 = ./integral/data.txt
+target = real
+file_p3 = ./integral/data.txt
 
-target = imag_analytic
+# target = imag_analytic
