--- a/jack_init.ini
+++ b/jack_init.ini
@@ -1,5 +1,5 @@
-# traj_start = 1100
-traj_start = 1250
+traj_start = 1100
+# traj_start = 1250
 # traj_start = 1360
 traj_end = 1370
 # traj_end = 1200
@@ -20,7 +20,9 @@ time_cutoff_end = 16
 # file_p3 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p3/data.txt
 # file_p1 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p1/data.txt
 
-target = real
-file_p3 = ./integral/data.txt
+# target = real
+# file_p3 = ./integral/data.txt
 
 # target = imag_analytic
+
+target = form_factor
