--- a/jack_init.ini
+++ b/jack_init.ini
@@ -23,6 +23,6 @@ time_cutoff_end = 16
 # target = real
 # file_p3 = ./integral/data.txt
 
-# target = imag_analytic
+target = imag_analytic
 
-target = form_factor
+# target = form_factor
