add 32DF; modified wall_to_wall.cc

--- a/jack_init.ini
+++ b/jack_init.ini
@@ -1,8 +1,10 @@
 traj_start = 1110
 # traj_start = 1250
-# traj_start = 1360
-traj_end = 1370
+ traj_end = 1370
 # traj_end = 1200
+
+# traj_start = 270
+# traj_end = 430
 traj_sep = 10
 
 time_cutoff_start = 2
