make Mpi Npi Z_V boost options

--- a/jack_init.ini
+++ b/jack_init.ini
@@ -1,3 +1,7 @@
+ensemble = Pion_32ID
+# ensemble = Pion_32IDF
+
+
 traj_start = 1110
 # traj_start = 1250
  traj_end = 1370
@@ -22,9 +26,9 @@ time_cutoff_end = 16
 # file_p3 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p3/data.txt
 # file_p1 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p1/data.txt
 
-# target = real
-# file_p3 = ./integral/data.txt
+target = real
+file_p3 = ./integral/data.txt
 
-target = imag_analytic
+# target = imag_analytic
 
 # target = form_factor
