--- a/jack_init.ini
+++ b/jack_init.ini
@@ -1,14 +1,14 @@
-ensemble = Pion_32ID
-# ensemble = Pion_32IDF
+# ensemble = Pion_32ID
+ensemble = Pion_32IDF
 
 
-traj_start = 1110
+# traj_start = 1110
 # traj_start = 1250
- traj_end = 1370
+# traj_end = 1370
 # traj_end = 1200
 
-# traj_start = 270
-# traj_end = 430
+traj_start = 270
+traj_end = 430
 traj_sep = 10
 
 time_cutoff_start = 2
@@ -27,6 +27,8 @@ time_cutoff_end = 16
 # file_p1 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p1/data.txt
 
 # target = real
+# file_p3 = ./integral/32IDF/data.txt
+
 # file_p3 = ./integral/data.txt
 
 # target = imag_analytic
