--- a/jack_init.ini
+++ b/jack_init.ini
@@ -26,11 +26,10 @@ time_cutoff_end = 16
 # file_p3 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p3/data.txt
 # file_p1 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p1/data.txt
 
-# target = real
-# file_p3 = ./integral/32IDF/data.txt
-
+target = real
+file_p3 = ./integral/32IDF/data.txt
 # file_p3 = ./integral/data.txt
 
 # target = imag_analytic
 
-target = form_factor
+# target = form_factor
