--- a/jack_init.ini
+++ b/jack_init.ini
@@ -13,8 +13,10 @@ ensemble = Pion_24ID
 # traj_sep = 10
 
 # # for 24ID
-traj_start = 2260
-traj_end = 2640
+traj_start = 2370
+; traj_start = 2260
+traj_end = 2510
+; traj_end = 2640
 traj_sep = 10
 
 time_cutoff_start = 2
@@ -32,7 +34,7 @@ time_cutoff_end = 16
 # file_p1 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p1/data.txt
 
 target = real
-# file_p3 = ./integral/data.txt
+# file_p3 = ./integral/32ID/data.txt
 # file_p3 = ./integral/32IDF/data.txt
 file_p3 = ./integral/24ID/data.txt
 
