read lattice size

--- a/jack_init.ini
+++ b/jack_init.ini
@@ -1,3 +1,4 @@
+lat_size = 24 24 24 64
 # ensemble = Pion_32ID
 # ensemble = Pion_32IDF
 ensemble = Pion_24ID
@@ -14,9 +15,9 @@ ensemble = Pion_24ID
 
 # # for 24ID
 traj_start = 2370
-; traj_start = 2260
+# traj_start = 2260
 traj_end = 2510
-; traj_end = 2640
+# traj_end = 2640
 traj_sep = 10
 
 time_cutoff_start = 2
