--- a/jack_init.ini
+++ b/jack_init.ini
@@ -1,12 +1,14 @@
-lat_size = 24 24 24 64
-# ensemble = Pion_32ID
-# ensemble = Pion_32IDF
-ensemble = Pion_24ID
+# lat_size = 24 24 24 64
+lat_size = 32 32 32 64
 
-# # 32ID
-# traj_start = 1110
-# traj_end = 1370
-# traj_sep = 10
+ensemble = Pion_32ID
+# ensemble = Pion_32IDF
+# ensemble = Pion_24ID
+
+# 32ID
+traj_start = 980
+traj_end = 1370
+traj_sep = 10
 
 # # for 32IDF
 # traj_start = 270
@@ -14,11 +16,10 @@ ensemble = Pion_24ID
 # traj_sep = 10
 
 # # for 24ID
-traj_start = 2370
 # traj_start = 2260
-traj_end = 2510
 # traj_end = 2640
-traj_sep = 10
+# traj_sep = 10
+# traj_skip = 2360 2520 2540 2580
 
 time_cutoff_start = 2
 time_cutoff_end = 16
@@ -34,11 +35,11 @@ time_cutoff_end = 16
 # file_p3 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p3/data.txt
 # file_p1 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p1/data.txt
 
-target = real
+# target = real
 # file_p3 = ./integral/32ID/data.txt
 # file_p3 = ./integral/32IDF/data.txt
-file_p3 = ./integral/24ID/data.txt
+# file_p3 = ./integral/24ID/data.txt
 
-# target = imag_analytic
+target = imag_analytic
 
 # target = form_factor
