--- a/jack_init.ini
+++ b/jack_init.ini
@@ -1,28 +1,11 @@
-# lat_size = 24 24 24 64
-lat_size = 32 32 32 64
-
-ensemble = Pion_32ID
+# ensemble = Pion_32ID
+ensemble = Pion_48I
 # ensemble = Pion_32IDF
 # ensemble = Pion_24ID
 
-# 32ID
-traj_start = 980
-traj_end = 1370
-traj_sep = 10
-
-# # for 32IDF
-# traj_start = 270
-# traj_end = 430
-# traj_sep = 10
-
-# # for 24ID
-# traj_start = 2260
-# traj_end = 2640
-# traj_sep = 10
-# traj_skip = 2360 2520 2540 2580
-
 time_cutoff_start = 2
-time_cutoff_end = 16
+# time_cutoff_end = 16
+time_cutoff_end = 24
 
 # # target can be: real, real_CUBA3d, imag_analytic, imag_CUBA3d
 
@@ -36,6 +19,7 @@ time_cutoff_end = 16
 # file_p1 = /gpfs/mira-fs1/projects/HadronicLight_4/yidizhao/cooley/pionGG/integrals/imag/p1/data.txt
 
 # target = real
+# file_p3 = ./integral/48I/data.txt
 # file_p3 = ./integral/32ID/data.txt
 # file_p3 = ./integral/32IDF/data.txt
 # file_p3 = ./integral/24ID/data.txt
