cleaned up code

--- a/jack_init.ini
+++ b/jack_init.ini
@@ -1,11 +1,11 @@
 # ensemble = Pion_32ID
-ensemble = Pion_48I
+# ensemble = Pion_48I
 # ensemble = Pion_32IDF
-# ensemble = Pion_24ID
+ensemble = Pion_24ID
 
 time_cutoff_start = 2
-# time_cutoff_end = 16
-time_cutoff_end = 24
+time_cutoff_end = 16
+# time_cutoff_end = 24
 
 # # target can be: real, real_CUBA3d, imag_analytic, imag_CUBA3d
 
