--- a/jack_init.ini
+++ b/jack_init.ini
@@ -2,6 +2,8 @@
 # ensemble = Pion_48I
 # ensemble = Pion_32IDF
 ensemble = Pion_24ID
+# ensemble = Pion_24ID_disc
+# ensemble = Pion_32ID_disc2
 
 time_cutoff_start = 2
 time_cutoff_end = 16
@@ -27,3 +29,6 @@ time_cutoff_end = 16
 target = imag_analytic
 
 # target = form_factor
+
+doAmplitude = true
+# doAmplitude = false
