--- a/jack_init.ini
+++ b/jack_init.ini
@@ -1,11 +1,12 @@
 # ensemble = Pion_32ID
 # ensemble = Pion_48I
 # ensemble = Pion_32IDF
-ensemble = Pion_24ID
-# ensemble = Pion_24ID_disc
+# ensemble = Pion_24ID
+ensemble = Pion_24ID_disc
 # ensemble = Pion_32ID_disc2
 
-time_cutoff_start = 2
+# time_cutoff_start = 2
+time_cutoff_start = 1
 time_cutoff_end = 16
 # time_cutoff_end = 24
 
@@ -30,5 +31,3 @@ target = imag_analytic
 
 # target = form_factor
 
-doAmplitude = true
-# doAmplitude = false
